# dhis-python-client

./: .gitignore  README.md  dhis2-test.ipynb  fhir-test.ipynb  pyproject.toml
dhis2_api_client/: __init__.py
dhis2_api_client/models/: __init__.py  access.py  access_data.py  account_update_password_response_200.py  account_validate_password_get_response_200.py  account_validate_password_post_response_200.py  account_validate_user_name_get_post_response_200.py  account_validate_user_name_get_response_200.py  add_icon_request.py  add_operation.py  add_operation_value.py  aggregate_data_exchange.py  aggregate_data_exchange_add_collection_item_property.py  aggregate_data_exchange_add_collection_items_jsonadd_collection_items_xml_property.py  aggregate_data_exchange_bulk_sharing_atomic_mode.py  aggregate_data_exchange_bulk_sharing_flush_mode.py  aggregate_data_exchange_bulk_sharing_identifier.py  aggregate_data_exchange_bulk_sharing_import_mode.py  aggregate_data_exchange_bulk_sharing_import_report_mode.py  aggregate_data_exchange_bulk_sharing_import_strategy.py  aggregate_data_exchange_bulk_sharing_preheat_mode.py  aggregate_data_exchange_bulk_sharing_root_junction.py  aggregate_data_exchange_bulk_sharing_user_override_mode.py  aggregate_data_exchange_created_by.py  aggregate_data_exchange_delete_collection_item_property.py  aggregate_data_exchange_delete_collection_items_jsondelete_collection_items_xml_property.py  aggregate_data_exchange_get_object_gist_as_csv_auto.py  aggregate_data_exchange_get_object_gist_as_csv_root_junction.py  (+7734 more)
docs/: python_client.webm
(+2842 files in other folders)
